--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.14" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Image" />
+      <!-- Upload Image Button -->
+      <Button layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Image" fx:id="uploadButton" />
+
+      <!-- Image View to display the uploaded image -->
+      <ImageView fx:id="imageView" layoutX="50.0" layoutY="50.0" fitWidth="500.0" fitHeight="300.0" />
    </children>
 </AnchorPane>
