--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -7,7 +7,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.14" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <!-- Upload Image Button -->
-      <Button layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Image" fx:id="uploadButton" />
+      <Button layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Images" fx:id="uploadButton" />
 
       <!-- Image View to display the uploaded image -->
       <ImageView fx:id="imageView" layoutX="50.0" layoutY="50.0" fitWidth="500.0" fitHeight="300.0" />
