--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.14" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <!-- Upload Image Button -->
-      <Button layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Images" fx:id="uploadButton" />
+      <Button fx:id="uploadButton" alignment="BOTTOM_RIGHT" layoutX="494.0" layoutY="343.0" mnemonicParsing="false" text="Upload Images" textAlignment="RIGHT" />
 
       <!-- Image View to display the uploaded image -->
-      <ImageView fx:id="imageView" layoutX="50.0" layoutY="50.0" fitWidth="500.0" fitHeight="300.0" />
+      <ImageView fx:id="imageView" fitHeight="300.0" fitWidth="500.0" layoutX="50.0" layoutY="50.0" />
+      <Button alignment="TOP_RIGHT" layoutX="508.0" layoutY="37.0" mnemonicParsing="false" text="Create Albums" textAlignment="RIGHT" />
    </children>
 </AnchorPane>
