--- a/src/main/resources/MainView.fxml
+++ b/src/main/resources/MainView.fxml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.web.WebView?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="911.0" prefWidth="1466.0" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="911.0" prefWidth="1466.0" xmlns="http://javafx.com/javafx/17.0.14" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.MainController">
    <children>
 
-      <!-- Image View to display the uploaded image -->
-      <ImageView fx:id="imageView" fitHeight="202.0" fitWidth="230.0" layoutX="270.0" layoutY="618.0" />
-
-      <!-- WebView for Google Maps -->
+      <!-- Google Maps WebView -->
       <WebView fx:id="mapWebView" layoutX="391.0" layoutY="28.0" prefHeight="388.0" prefWidth="974.0" />
 
       <!-- Sidebar Menu -->
-      <VBox layoutY="-1.0" prefHeight="613.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;"
-            AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox layoutY="-1.0" prefHeight="613.0" prefWidth="259.0" style="-fx-background-color: #3F2B63;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Pane prefHeight="153.0" prefWidth="259.0">
                <children>
-                  <Label layoutX="45.0" layoutY="55.0" prefHeight="43.0" prefWidth="170.0"
-                         text="SmartTravelJournal" textFill="WHITE">
+                  <Label layoutX="45.0" layoutY="55.0" prefHeight="43.0" prefWidth="170.0" text="SmartTravelJournal" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -36,73 +28,26 @@
                </children>
             </Pane>
 
-            <!-- Upload Image Button -->
-            <Button fx:id="uploadButton" alignment="BASELINE_LEFT" mnemonicParsing="false"
-                    prefHeight="60.0" prefWidth="258.0" text="Upload Images" textAlignment="RIGHT">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
-
-            <!-- Create Albums Button -->
-            <Button fx:id="createAlbumButton" alignment="BASELINE_LEFT" mnemonicParsing="false"
-                    prefHeight="60.0" prefWidth="259.0" text="Create Albums" textAlignment="RIGHT"
-                    onAction="#openCreateAlbumWindow">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
-
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0"
-                    text="Fees" textAlignment="RIGHT">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
-
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0"
-                    text="Users" textAlignment="RIGHT">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font size="13.0" />
-               </font>
-            </Button>
-
-            <Button alignment="BASELINE_LEFT" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0"
-                    text="Settings" textAlignment="RIGHT">
-               <padding>
-                  <Insets left="50.0" />
-               </padding>
-               <font>
-                  <Font name="Bell MT" size="13.0" />
-               </font>
-            </Button>
+            <!-- Buttons -->
+            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadImage" prefHeight="60.0" prefWidth="265.0" text="Upload Images" />
+            <Button mnemonicParsing="false" onAction="#openCreateAlbumWindow" prefHeight="60.0" prefWidth="259.0" text="Create Albums" />
+            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" text="User" />
          </children>
       </VBox>
 
-      <!-- Album Panel (Hidden Initially) -->
-      <Pane fx:id="albumPane" layoutX="391.0" layoutY="450.0" prefHeight="300.0" prefWidth="974.0"
-            style="-fx-background-color: lightgray; -fx-border-color: black;" visible="true">
+      <!-- Album Panel -->
+      <Pane fx:id="albumPane" layoutX="391.0" layoutY="430.0" prefHeight="450.0" prefWidth="980.0" style="-fx-background-color: lightgray; -fx-border-color: black;" visible="false">
          <children>
-            <Label layoutX="450.0" layoutY="40.0" text="Empty" />
             <!-- Close Button -->
-            <Button fx:id="closeAlbumButton" layoutX="930.0" layoutY="10.0" text="X"
-                    style="-fx-background-color: red; -fx-text-fill: white; -fx-font-weight: bold;"
-                    onAction="#closeCreateAlbumWindow"/>
+            <Button layoutX="950.0" layoutY="10.0" onAction="#closeAlbumWindow" text="X" />
+
+            <!-- Image Container (HBox for horizontal arrangement) -->
+            <HBox fx:id="imageContainer" layoutX="20.0" layoutY="50.0" spacing="20">
+               <!-- Images will be added dynamically -->
+            </HBox>
+
          </children>
       </Pane>
 
    </children>
 </AnchorPane>
-
