--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -59,6 +59,24 @@
     -fx-text-fill: white;
 }
 
+.button3 {
+    -fx-background-color: transparent;
+    -fx-text-fill: black;
+    -fx-font-family: Georgia, serif;
+    -fx-font-size: 16px;
+    -fx-background-radius: 8;
+    -fx-border-width: 0;   /* No border */
+    -fx-cursor: hand;
+    -fx-padding: 10 20 10 20;
+
+      /* Limited transition effect in JavaFX */
+        -fx-transition: all 0.5s ease;
+}
+
+
+
+
+
 
 /*dropdown menu*/
 .menu-button.button > .label {
@@ -110,6 +128,22 @@
     -fx-text-fill: white;
 }
 
+
+/*pane css*/
+.album-pane {
+    -fx-background-color: #f4f4f4;
+    -fx-border-color: #333333;
+    -fx-border-width: 2;
+    -fx-border-radius: 10;
+    -fx-background-radius: 10;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 10, 0, 0, 4);
+}
+
+.album-title {
+    -fx-font-size: 24px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #333333;
+}
 
 
 
